Fixed footer alignment and padding

--- a/ci435/css/stylesheet.css
+++ b/ci435/css/stylesheet.css
@@ -367,7 +367,10 @@ section h2 {
     text-align: center;
 }
 
-
+footer {
+    padding: 20px;
+    text-align: center;
+}
 
 
 
